--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
-Django==3.2.12
-psycopg2-binary==2.9.10
-python-decouple==3.8
+asgiref==3.9.1
+Django==5.2.4
+sqlparse==0.5.3
+typing_extensions==4.14.1
